--- a/_sass/_06_typography.scss
+++ b/_sass/_06_typography.scss
@@ -157,6 +157,10 @@ figcaption a:hover,
     text-align: right;
 }
 
+#masthead .backstretch {
+    border-top: 1px solid #e3e3e3;
+    border-bottom: 1px solid #e3e3e3;
+}
 
 
 /* Tables
